logs y excepciones entero y arreglo de error